--- a/demo.html
+++ b/demo.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8" />
   <title>emojs.js demo</title>
-  <link href="http://cdn.staticfile.org/emoji/0.2.2/emoji.css" rel="stylesheet" type="text/css" />
-  <script src="http://cdn.staticfile.org/jquery/2.1.0/jquery.min.js"></script>
-  <script src="http://cdn.staticfile.org/emoji/0.2.2/emoji.js"></script>
+  <link href="lib/emoji.css" rel="stylesheet" type="text/css" />
+  <script src="lib/jquery-1.7.2.min.js"></script>
+  <script src="lib/emoji.js"></script>
 </head>
 <body>
 <div class="emojstext">
